[gd_scene load_steps=13 format=2]

[ext_resource path="res://GFX/Background/bg_layer2.png" type="Texture" id=1]
[ext_resource path="res://GFX/Background/bg_layer4.png" type="Texture" id=2]
[ext_resource path="res://GFX/Background/bg_layer1.png" type="Texture" id=3]
[ext_resource path="res://GFX/Background/bg_layer3.png" type="Texture" id=4]
[ext_resource path="res://Fonts/candles_.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://GFX/Players/bunny2_ready.png" type="Texture" id=6]
[ext_resource path="res://Levels/CharacterSelection.gd" type="Script" id=7]
[ext_resource path="res://GFX/Players/bunny5_ready.png" type="Texture" id=8]
[ext_resource path="res://GFX/Players/bunny4_ready.png" type="Texture" id=9]
[ext_resource path="res://GFX/Players/bunny3_ready.png" type="Texture" id=10]
[ext_resource path="res://SFX/Chiptune_Adventures_1.ogg" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[node name="PlayerSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -500.0
margin_bottom = -500.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -500.0
margin_bottom = -500.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -500.0
margin_bottom = -500.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -500.0
margin_bottom = -500.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 191.0
margin_top = 444.0
margin_right = 1728.0
margin_bottom = 635.0

[node name="Dai" type="TextureButton" parent="CenterContainer/HBoxContainer"]
margin_right = 121.0
margin_bottom = 191.0
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer"]
margin_left = 125.0
margin_top = 32.0
margin_right = 376.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = " Dai "

[node name="Duh" type="TextureButton" parent="CenterContainer/HBoxContainer"]
margin_left = 380.0
margin_right = 500.0
margin_bottom = 191.0
texture_normal = ExtResource( 10 )

[node name="Label2" type="Label" parent="CenterContainer/HBoxContainer"]
margin_left = 504.0
margin_top = 32.0
margin_right = 786.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = " Edu "

[node name="Bru" type="TextureButton" parent="CenterContainer/HBoxContainer"]
margin_left = 790.0
margin_right = 910.0
margin_bottom = 191.0
texture_normal = ExtResource( 9 )

[node name="Label3" type="Label" parent="CenterContainer/HBoxContainer"]
margin_left = 914.0
margin_top = 32.0
margin_right = 1175.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = " Bru "

[node name="Isa" type="TextureButton" parent="CenterContainer/HBoxContainer"]
margin_left = 1179.0
margin_right = 1299.0
margin_bottom = 191.0
texture_normal = ExtResource( 8 )

[node name="Label4" type="Label" parent="CenterContainer/HBoxContainer"]
margin_left = 1303.0
margin_top = 32.0
margin_right = 1537.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = " Isa "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -15.0
autoplay = true
[connection signal="pressed" from="CenterContainer/HBoxContainer/Dai" to="." method="_on_Dai_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Duh" to="." method="_on_Duh_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Bru" to="." method="_on_Bru_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Isa" to="." method="_on_Isa_pressed"]
